@@ -8,7 +8,7 @@ $config['menu_choices'] = array(
         array('name' => 'Bravo', 'link' => '/Bravo'),
         array('name' => 'Charlie', 'link' => '/Charlie/Brown'),
         array('name' => 'Delta', 'link' => '/Delta/Force'),
-        array('name' => 'Echo', 'link' => '#'),
+        array('name' => 'Echo', 'link' => '/Echo/Must/wehave'),
         array('name' => 'Foxtrot', 'link' => '/foxtrot/'),
         array('name' => 'Golf', 'link' => '#'),
         array('name' => 'Hotel', 'link' => '#'),
