@@ -8,6 +8,8 @@ Jason Sekhon(Captain), Eric Lin(Mate), Morris Arroyo(Mate)
 
 * Completed india issue. Added india controller and made it link to an image. updated menubar item for india to link to "/india"
 
+* Completed echo issue. Added echo folder, must controller and updated menubar link for Echo to "echo/must/wehave"
+
 * Completed foxtrot issue. Added tango controller and routed foxtrot to "tango/index"
 
 * Completed bravo issue. Added bravo folder and welcome controller inside it. updated menubar item bravo to "/bravo"
